<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="refueling"
            type="be.ehb.digx.refuel.addeditrefueling.view.model.Refueling"/>

        <variable
            name="presenter"
            type="be.ehb.digx.refuel.addeditrefueling.AddEditRefuelPresenter"/>

        <variable
            name="handler"
            type="be.ehb.digx.refuel.addeditrefueling.AddEditRefuelingFragment"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <!-- Refuel save progress -->

        <ScrollView
            android:id="@+id/lv_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top">
            <LinearLayout
                android:id="@+id/lv_email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/aev_date"
                    android:onClick="@{() -> handler.onDateClicked(refueling.date)}"
                    android:text="@={refueling.date}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:id="@+id/aev_time"
                    android:onClick="@{() -> handler.onTimeClicked(refueling.time)}"
                    android:text="@={refueling.time}" />
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/aev_fuelType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/action_fuelType"
                        android:text="@={refueling.fuelType}"
                        android:visibility="gone"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/aev_fueledVolume"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/action_fueledVolume"
                        android:text="@={refueling.fueledVolume}"
                        android:imeOptions="actionUnspecified"
                        android:inputType="numberDecimal"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/aev_literPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/action_literPcice"
                        android:text="@={refueling.literPrice}"
                        android:imeOptions="actionUnspecified"
                        android:inputType="numberDecimal"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/aev_mileAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/action_mileAge"
                        android:text="@={refueling.mileAge}"
                        android:imeOptions="actionUnspecified"
                        android:inputType="number"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/action_external"/>
                <CheckBox
                    android:id="@+id/aev_external"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@={refueling.external}"/>
                </LinearLayout>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/aev_bttnSave"
                    android:onClick="@{() ->  presenter.addRefueling(refueling)}"
                    android:text="@string/action_save"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>